developer facing setup help and add test framework to todo list