@@ -6,6 +6,7 @@ toolchain set up (ty @lea89 for the help there!) and writing a basic proof-of-co
 
 <b>RoadMap:</b>
 - [x] Implement a basic `@Guard.Null` annotation for variable declaration that null checks the resolved value of that line.
+- [ ] Test framework and toolchain cleanup
 - [ ] Expand that system to check each step along the way (see usages, this is psuedo optional chaining)
 - [ ] Implement safe returns out of Expression statements with null checks at each step along the way
 - [ ] Implement error handling for improper annotation usage
@@ -19,7 +20,7 @@ Variable nullability:
 ```java
 private void foo() {
     @Guard.Null String idString = this.id;
-    ...
+    // ...
 }
 // Maps to...
 private void foo() {
@@ -27,6 +28,7 @@ private void foo() {
     if (com$dulkir$guard$id$0 == null) {
         return;
     }
+    // ...
 }
 ```
 
@@ -34,7 +36,7 @@ Chaining, and functions (and maybe exit functions?):
 ```java
 private void foo() {
     @Guard.Null(methodHandle = "logwtf") char firstIdChar = this.id.charAt(0);
-    ...
+    // ...
 }
 // Maps to...
 private void foo() {
@@ -46,7 +48,7 @@ private void foo() {
     if (com$dulkir$guard$id$1 == null) {
         return this::logWtf;
     }
-    ...
+    // ...
 }
 ```
 
@@ -56,7 +58,7 @@ private void foo() {
     @Guard.Empty
     @Guard.Null 
     char firstIdChar = this.id.charAt(0);
-    ...
+    // ...
 }
 // Maps to...
 private void foo() {
@@ -71,7 +73,7 @@ private void foo() {
     if (com$dulkir$guard$id$1 == null) {
         return;
     }
-    ...
+    // ...
 }
 ```
 
@@ -82,3 +84,31 @@ I feel like there *might* be some people who also would appreciate the boiler-pl
 
 There is probably some valid criticism to this idea in that it's a bit silly to use a verbose language if you don't
 want to be verbose. However, I counter this with the super thought out "choice is cool" argument.
+
+## For Developers:
+The project is mostly set up to be run through the usage of the tasks provided in the plugin package at the moment.
+see `./gradlew buildAndDebug`.
+
+If you're having issues with imports in the test package, you may need to add the following to your `.idea/compiler.xml`:
+```
+  <component name="CompilerConfiguration">
+    <bytecodeTargetLevel target="21" />
+  </component>
+  <component name="JavacSettings">
+    <option name="ADDITIONAL_OPTIONS_OVERRIDE">
+      <module
+              name="guard.plugin.main"
+              options="--add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+                      --add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
+                      --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
+                      --add-exports jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED" />
+    </option>
+  </component>
+```
+
+This seems to be an issue with intellij not recognizing that we'll have access to these classes, as we're not
+setting this up as a normal dependency. Stuff works just fine without this intellij configuration, but it's unpleasant
+to work with. I'm looking for a better way to set this up, but I'm hesitant to take this off the gitignore because I
+read that intellij will tend to try to automatically overwrite this file a lot. if you have a better solution, feel
+free to let me know!
+
